--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,161 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-*{
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-   font-family: 'Bebas Neue', sans-serif;
-}
-
 body{
-   background: rgb(39, 41, 40);
-}
-
-.header{
-    position: fixed;
-    top: 0;
-    left: 0;
+    margin: 0;
+    background-image: url(conferenece.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
     width: 100%;
-    padding: 20px 10%;
+    height: 200vh;
+}
+header h1:hover{
+    cursor: pointer;
+    opacity: 80%;
+}
+h1{
+    font-family: 'Antonio', sans-serif;
+    display: inline;
+    color: white;
+    margin-left: 25px;
+    margin-top: 10px;
+}
+h6{
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    color: white;
+    position: absolute;
+    right: 10px;
+    top: 30px;
+}
+header{
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    background: rgba(53, 53, 53, 0.356);
+}
+header ul{
+    float: right;
+    list-style-type: none;
+}
+header ul li{
+    display: inline;
+}
+header ul li a{
+    font-family: 'Roboto', sans-serif;
+    text-decoration: none;
+    color: white;
+    padding: 10px 45px 10px 45px;
+    border-radius: 3px;
+}
+header ul li a:hover{
+    color: rgb(111, 194, 241);
+    background: white;
+}
+section {
+    width: 100%;
+    height: 400px;
+    text-align: center;
+}
+section h1{
+    display: inline-block;
+    margin-top: 200px;
+    font-size: 50px;
+}
+section p{
+    font-family: 'Antonio', sans-serif;
+    color: white;
+}
+.button{
+    width: 100%;
+    height: 50px;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.button input{
+    padding: 10px 30px;
     background: transparent;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 100;
-
-}
-
-.logo{
-    font-size: 25px;
+    border: 2px solid;
     color: white;
-    text-decoration: none;
-    font-weight: 600;
-    letter-spacing: 1rem;
+    
 }
-
-.navbar a{
-    font-size: 18px;
-    color: white;
-    text-decoration: none;
-    font-weight: 500;
+.button input:hover{
+    color: rgb(111, 194, 241);
+    background: white;
+}
+.sec2{
+    background: white;
+}
+.sec2 img{
+    float: left;
+    margin: 50px 10px 50px 10%;
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    border: 1px solid;
+    color: rgb(36, 122, 114);
+}
+.sec2 img:hover{
+    opacity: 80%;
+}
+section article{
+    float: left;
+    width: 60%;
+    height: 400px;
+}
+.sec2 p,h2{
     margin-left: 50px;
-    transition: color .3s;
+    color: black;
+    text-align: left;
+}
+.sec2 h2{
+    font-family: 'Antonio', sans-serif;
+}
+.adjust1{
+    margin-top: 13%;
+}
+section .sec3{
+    height: 300px;
+}
+table{
+    margin: 130px auto 0 auto;
+    font-family: 'Antonio', sans-serif;
+    color: white;
+}
+table tr th{
+    padding-bottom: 0;
+    font-size: 30px;
 }
 
-.navbar a:hover,.navbar a.active{
-    color: rgb(24, 194, 236);
+footer{
+    height: 5%;
+    width: 100%;
+    background: rgb(49, 121, 115);
+    
 }
-.navbar a.active:hover{
+h4{
+    display: inline-block;
+    margin: 2% 0 0 10%;
+    font-family: 'Montserrat', sans-serif;
     color: white;
+}
+h4:hover{
+    cursor: pointer;
+    opacity: 80%;
+}
+footer ul{
+    width: 30%;
+    list-style-type: none;
+    float: right;
+    
+}
+footer ul li{
+    margin-top: 2%;
+    margin-left: 4%;
+    display: inline-block;
+}
+footer a{
+    text-decoration: none;
+    color: white;
+}
+footer a:hover{
+    color: rgba(228, 227, 227, 0.781);
 }
