--- a/styles4.css
+++ b/styles4.css
@@ -1,6 +1,6 @@
 body{
     margin: 0;
-    background-image: url(conferenece.png);
+    background-image: url(./img/conferenece.png);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
